--- a/course.html
+++ b/course.html
@@ -290,6 +290,7 @@
         <div class="row">
           <div class="col-8">
             <div class="course">
+              <!-- Start course boxes -->
               <div class="course-boxes">
                 <div class="row">
                   <div class="col-4">
@@ -396,6 +397,22 @@
                   </div>
                 </div>
               </div>
+              <!-- finish course boxes -->
+
+              <!-- Start course progress -->
+              <div class="course-progress">
+                <div class="course-progress__header">
+                  <i class="fas fa-chart-line course-progress__icon"></i>
+                  <span class="course-progress__title">
+                    درصد پیشرفت دوره: 100%
+                  </span>
+                </div>
+                <div class="progress course-progress__bar" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%"></div>
+                </div>
+              </div>
+
+              <!-- finish course progress -->
             </div>
           </div>
 
