--- a/course.html
+++ b/course.html
@@ -662,7 +662,17 @@
                   </div>
                 </div>
               </div>
-              <div class="course-info"></div>
+              <div class="course-info">
+                <div class="course-info__header-short-url">
+                  <i class="fas fa-link course-info__short-url-icon"></i>
+                  <span class="course-info__short-url-text">
+                    لینک کوتاه
+                  </span>
+                </div>
+                <span class="course-info__short-url">
+                  https://sabzlearn.ir/?p=117472
+                </span>
+              </div>
               <div class="course-info"></div>
               <div class="course-info"></div>
             </div>
