--- a/blog.html
+++ b/blog.html
@@ -241,98 +241,165 @@
     </section>
     <!-- finish Breadcrumb -->
 
+    <!-- Start Main Info Section -->
+    <main class="main">
+      <div class="container">
+        <div class="row">
+          <div class="col-8"></div>
 
+          <div class="col-4">
+            <div class="courses-info">
+              <div class="course-info">
+                <span class="course-info__courses-title">پر امتیازترین محصولات</span>
+                <ul class="course-info__courses-list">
+                  <li class="course-info__courses-list-item">
+                    <a href="#" class="course-info__courses-link">
+                      <img
+                        src="images/courses/jango.png"
+                        alt="course cover"
+                        class="course-info__courses-img"
+                      />
+                      <span class="course-info__courses-text">
+                        پروژه های جنگو
+                      </span>
+                    </a>
+                  </li>
+                  <li class="course-info__courses-list-item">
+                    <a href="#" class="course-info__courses-link">
+                      <img
+                        src="images/courses/nodejs.png"
+                        alt="course cover"
+                        class="course-info__courses-img"
+                      />
+                      <span class="course-info__courses-text">
+                        پروژه های نود جی اس
+                      </span>
+                    </a>
+                  </li>
+                  <li class="course-info__courses-list-item">
+                    <a href="#" class="course-info__courses-link">
+                      <img
+                        src="images/courses/python.png"
+                        alt="course cover"
+                        class="course-info__courses-img"
+                      />
+                      <span class="course-info__courses-text">
+                        پروژه های پایتون
+                      </span>
+                    </a>
+                  </li>
+                  <li class="course-info__courses-list-item">
+                    <a href="#" class="course-info__courses-link">
+                      <img
+                        src="images/courses/youtuber.png"
+                        alt="course cover"
+                        class="course-info__courses-img"
+                      />
+                      <span class="course-info__courses-text">
+                        پروژه های یوتیوبر
+                      </span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
 
-     <!-- start footer -->
-     <footer class="footer">
-        <div class="container">
-          <div class="footer-widgets">
-            <div class="row">
-              <div class="col-4">
-                <div class="footer-widgets__item">
-                  <span class="footer-widgets__title"> درباره ما </span>
-                  <p class="footer-widgets__text">
-                    وقتی تازه شروع به یادگیری برنامه نویسی کردم. یکی از مشکلاتی که
-                    در فرآیند یادگیری داشتم، کمبود آموزش های خوب با پشتیبانی قابل
-                    قبول بود که باعث شد اون موقع تصمیم بگیرم اگر روزی توانایی مالی
-                    و فنی قابل قبولی داشتم یک وب سایت برای حل این مشکل راه اندازی
-                    کنم! و خب امروز آکادمی آموزش برنامه نویسی سبزلرن به عنوان یک
-                    آکادمی خصوصی فعالیت میکنه و این به این معنی هست که هر مدرسی
-                    اجازه تدریس در اون رو نداره و باید از فیلترینگ های خاص آکادمی
-                    سبزلرن رد شه! این به این معنی هست که ما برامون فن بیان و نحوه
-                    تعامل مدرس با دانشجو بسیار مهمه! ما در آکادمی سبزلرن تضمین
-                    پشتیبانی خوب و با کیفیت رو به شما میدیم . چرا که مدرسین وب
-                    سایت سبزلرن حتی برای پشتیبانی دوره های رایگان شون هم هزینه
-                    دریافت میکنند و متعهد هستند که هوای کاربر های عزیز رو داشته
-                    باشند !
-                  </p>
+    <!-- finish Main Info Section -->
+
+    <!-- start footer -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-widgets">
+          <div class="row">
+            <div class="col-4">
+              <div class="footer-widgets__item">
+                <span class="footer-widgets__title"> درباره ما </span>
+                <p class="footer-widgets__text">
+                  وقتی تازه شروع به یادگیری برنامه نویسی کردم. یکی از مشکلاتی که
+                  در فرآیند یادگیری داشتم، کمبود آموزش های خوب با پشتیبانی قابل
+                  قبول بود که باعث شد اون موقع تصمیم بگیرم اگر روزی توانایی مالی
+                  و فنی قابل قبولی داشتم یک وب سایت برای حل این مشکل راه اندازی
+                  کنم! و خب امروز آکادمی آموزش برنامه نویسی سبزلرن به عنوان یک
+                  آکادمی خصوصی فعالیت میکنه و این به این معنی هست که هر مدرسی
+                  اجازه تدریس در اون رو نداره و باید از فیلترینگ های خاص آکادمی
+                  سبزلرن رد شه! این به این معنی هست که ما برامون فن بیان و نحوه
+                  تعامل مدرس با دانشجو بسیار مهمه! ما در آکادمی سبزلرن تضمین
+                  پشتیبانی خوب و با کیفیت رو به شما میدیم . چرا که مدرسین وب
+                  سایت سبزلرن حتی برای پشتیبانی دوره های رایگان شون هم هزینه
+                  دریافت میکنند و متعهد هستند که هوای کاربر های عزیز رو داشته
+                  باشند !
+                </p>
+              </div>
+            </div>
+
+            <div class="col-4">
+              <div class="footer-widgets__item">
+                <span class="footer-widgets__title"> آخرین مطالب </span>
+                <div class="footer-widgets__links">
+                  <a href="#" class="footer-widgets__link"
+                    >نحوه نصب کتابخانه در پایتون | آموزش نصب کتابخانه پایتون</a
+                  >
+                  <a href="#" class="footer-widgets__link"
+                    >چگونه پایتون را آپدیت کنیم؟ | آموزش صفر تا صد آپدیت کردن
+                    پایتون</a
+                  >
+                  <a href="#" class="footer-widgets__link"
+                    >آموزش نصب پایتون ( Python ) در در مک، ویندوز و لینوکس | گام
+                    به گام و تصویری</a
+                  >
+                  <a href="#" class="footer-widgets__link"
+                    >بهترین فریم ورک های فرانت اند | 16 فریم ورک Front end بررسی
+                    معایب و مزایا</a
+                  >
+                  <a href="#" class="footer-widgets__link"
+                    >معرفی بهترین سایت آموزش جاوا اسکریپت [ تجربه محور ] + آموزش
+                    رایگان</a
+                  >
                 </div>
               </div>
-  
-              <div class="col-4">
-                <div class="footer-widgets__item">
-                  <span class="footer-widgets__title"> آخرین مطالب </span>
-                  <div class="footer-widgets__links">
+            </div>
+
+            <div class="col-4">
+              <div class="footer-widgets__item">
+                <span class="footer-widgets__title">دسترسی سریع </span>
+                <div class="row">
+                  <div class="col-6">
+                    <a href="#" class="footer-widgets__link">آموزش HTML</a>
+                  </div>
+                  <div class="col-6">
+                    <a href="#" class="footer-widgets__link">آموزش CSS</a>
+                  </div>
+                  <div class="col-6">
                     <a href="#" class="footer-widgets__link"
-                      >نحوه نصب کتابخانه در پایتون | آموزش نصب کتابخانه پایتون</a
-                    >
-                    <a href="#" class="footer-widgets__link"
-                      >چگونه پایتون را آپدیت کنیم؟ | آموزش صفر تا صد آپدیت کردن
-                      پایتون</a
-                    >
-                    <a href="#" class="footer-widgets__link"
-                      >آموزش نصب پایتون ( Python ) در در مک، ویندوز و لینوکس | گام
-                      به گام و تصویری</a
-                    >
-                    <a href="#" class="footer-widgets__link"
-                      >بهترین فریم ورک های فرانت اند | 16 فریم ورک Front end بررسی
-                      معایب و مزایا</a
-                    >
-                    <a href="#" class="footer-widgets__link"
-                      >معرفی بهترین سایت آموزش جاوا اسکریپت [ تجربه محور ] + آموزش
-                      رایگان</a
+                      >آموزش جاوا اسکریپت</a
                     >
                   </div>
-                </div>
-              </div>
-  
-              <div class="col-4">
-                <div class="footer-widgets__item">
-                  <span class="footer-widgets__title">دسترسی سریع </span>
-                  <div class="row">
-                    <div class="col-6">
-                      <a href="#" class="footer-widgets__link">آموزش HTML</a>
-                    </div>
-                    <div class="col-6">
-                      <a href="#" class="footer-widgets__link">آموزش CSS</a>
-                    </div>
-                    <div class="col-6">
-                      <a href="#" class="footer-widgets__link"
-                        >آموزش جاوا اسکریپت</a
-                      >
-                    </div>
-                    <div class="col-6">
-                      <a href="#" class="footer-widgets__link">آموزش بوت استرپ</a>
-                    </div>
-                    <div class="col-6">
-                      <a href="#" class="footer-widgets__link">آموزش ریکت</a>
-                    </div>
-                    <div class="col-6">
-                      <a href="#" class="footer-widgets__link">آموزش پایتون</a>
-                    </div>
+                  <div class="col-6">
+                    <a href="#" class="footer-widgets__link">آموزش بوت استرپ</a>
+                  </div>
+                  <div class="col-6">
+                    <a href="#" class="footer-widgets__link">آموزش ریکت</a>
+                  </div>
+                  <div class="col-6">
+                    <a href="#" class="footer-widgets__link">آموزش پایتون</a>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="footer__copyright">
-          <span class="footer__copyright-text">
-            <img src="images/logo/Logo.png" width="100" alt="">
-          </span>
-        </div>
-      </footer>
-      <!-- finish footer -->
+      </div>
+      <div class="footer__copyright">
+        <span class="footer__copyright-text">
+          <img src="images/logo/Logo.png" width="100" alt="" />
+        </span>
+      </div>
+    </footer>
+    <!-- finish footer -->
 
     <script src="vendor/FontAwesome5/all.min.js"></script>
     <script src="vendor/swiperSlider/swiper.js"></script>
