--- a/blog.html
+++ b/blog.html
@@ -271,7 +271,40 @@
                 </div>
               </div>
 
-              <img src="images/blogs/1.jpg" alt="article-cover" class="article__banner"/>
+              <img
+                src="images/blogs/7.jpg"
+                alt="article-cover"
+                class="article__banner"
+              />
+
+              <div class="article__score">
+                <div class="article__score-icons">
+                  <img
+                    src="images/svgs/star_fill.svg"
+                    class="article__score-icon"
+                  />
+                  <img
+                    src="images/svgs/star_fill.svg"
+                    class="article__score-icon"
+                  />
+                  <img
+                    src="images/svgs/star_fill.svg"
+                    class="article__score-icon"
+                  />
+                  <img
+                    src="images/svgs/star_fill.svg"
+                    class="article__score-icon"
+                  />
+                  <img
+                    src="images/svgs/star.svg"
+                    class="article__score-icon"
+                  />
+                </div>
+                <span class="article__score-text">
+                  4.2/5 - (5 امتیاز)
+                </span>
+              </div>
+
             </div>
           </div>
 
